--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,3 +1,22 @@
 // Place all the styles related to the home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+.home-image{
+   display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
+.home-space{
+  padding-top: 10rem;
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  margin: auto auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: var(--color-dark-01);
+}
