--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,16 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<div class="row content home-space">
+  <div class="col-sm-12 col-lg-6">
+    <%= image_tag 'logo.png', class: 'home-image' %>
+  </div>
+  <div class="col-sm-12 col-lg-6">
+    <div class="container block-down">
+      <div class="jumbotron">
+        <h1 class="display-3">Agende seu uso da Sala de Reuniões :)</h1>
+        <p class="lead">Criado como prova técnica para vaga de Desenvolvedor na <strong>ESL</strong></p>
+        <hr class="my-2">
+        <%= link_to 'Acessar Sistema', nil, class: 'btn btn-primary btn-lg white' %>
+        <p class="lead">
+      </div>
+    </div>
+  </div>
+</div>
