Alterations in Home controller respond to JS and building of table

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,7 +8,7 @@
         <h1 class="display-3">Agende seu uso da Sala de Reuniões :)</h1>
         <p class="lead">Criado como prova técnica para vaga de Desenvolvedor na <strong>ESL</strong></p>
         <hr class="my-2">
-        <%= link_to 'Acessar Sistema', nil, class: 'btn btn-primary btn-lg white' %>
+        <%= link_to 'Acessar Sistema', home_system_path, class: 'btn btn-primary btn-lg white' %>
         <p class="lead">
       </div>
     </div>
