--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -20,3 +20,12 @@
   align-items: center;
   color: var(--color-dark-01);
 }
+
+.nav-logo{
+  width: 3rem;
+}
+
+.right{
+  align-items: center;
+  text-align: right
+}
