--- a/app/views/home/system.html.erb
+++ b/app/views/home/system.html.erb
@@ -18,9 +18,6 @@
         <%= date_field_tag :new_day, value: Time.now, class: 'date-field' %>
         <%= submit_tag 'Mostrar', class: 'btn btn-success link-field' %>
       <% end %>
-      <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalLong">
-        Launch demo modal
-      </button>
     </div>
   </div>
   <div class="row" id="calendar">
@@ -34,17 +31,16 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
+        <h5 class="modal-title" id="exampleModalLongTitle">Reservar Sala</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
-      <div class="modal-body">
-        ...
+      <div class="modal-body" id="d-form">
+        
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
       </div>
     </div>
   </div>
