Start creating aliasing for create and delete appoitments

--- a/app/views/appointments/create.js.erb
+++ b/app/views/appointments/create.js.erb
@@ -1,2 +1,2 @@
 $("#cadModal").modal('toggle')
-$('#d-form').html("<%= j render partial: 'partials/table' %>");
+$('#calendar').html("<%= j render partial: 'partials/table.html.erb', controller: :home_controller, action: :system %>");
