Routes alterations, devise updates

--- a/app/views/appointments/create.js.erb
+++ b/app/views/appointments/create.js.erb
@@ -1,2 +1,2 @@
 $("#cadModal").modal('toggle')
-$('#calendar').html("<%= j render partial: 'partials/table.html.erb', controller: :home_controller, action: :system %>");
+$('#calendar').html(<%= j render partial: 'partials/table', controller: :home_controller, action: :system %>);
