--- a/app/views/home/system.html.erb
+++ b/app/views/home/system.html.erb
@@ -3,6 +3,7 @@
 <% else%>
   <%= render 'partials/navbar' %>
 <% end %>
+
 <div class="page-header">
   <div class="row">
     <div class="col-sm-8 col-lg-8">
@@ -21,7 +22,7 @@
     </div>
   </div>
   <div class="row" id="calendar">
-    <%= render partial: 'partials/table' %>
+    
   </div>
 </div>
 
@@ -66,3 +67,8 @@
   </div>
 </div>
 
+<script>
+  $(document).ready(function(){
+    $('#calendar').html("<%= j render partial: 'partials/table' %>");
+  })
+</script>
