--- a/app/views/partials/_table.html.erb
+++ b/app/views/partials/_table.html.erb
@@ -18,12 +18,12 @@
     </thead>
     <tbody>
       <% @period.each do |hour| %>
-        <tr class=<%= "#{hour}-time" %>>
+        <tr>
           <td> <%="#{hour}"%></td>
           <td>
             <% unless (user = @reservations.find_by(day: @dates[0], hour: hour)).nil? %>
               Reservado para <%= user.user.name %>
-              <%= link_to home_view_path(id: user.id), {data: {toggle: 'modal', target: '#viewModal'}, remote: :true, class: 'btn btn-primary btn-sm'}  do %>
+              <%= link_to home_view_path(id: user.id), {data: {toggle: 'modal', target: '#viewModal'}, remote: :true, method: :patch, class: 'btn btn-primary btn-sm'}  do %>
                 <i class="fa fa-eye"></i>
               <% end %>
               <% if user.user == current_user%>
@@ -32,7 +32,7 @@
               <% end %>
               <% end%>
             <% else %>
-              <%= link_to home_link_path(date_to: @dates[0], hour_to: hour), remote: :true ,data: {toggle: 'modal', target: '#cadModal'}, class: 'btn btn-success' do %>
+              <%= link_to home_link_path(date_to: @dates[0], hour_to: hour), remote: :true, method: :patch ,data: {toggle: 'modal', target: '#cadModal'}, class: 'btn btn-success' do %>
                 <i class="fa fa-plus"></i> Disponível
               <% end %>
             <% end %>
@@ -40,7 +40,7 @@
           <td>
             <% unless (user = @reservations.find_by(day: @dates[1], hour: hour)).nil? %>
               Reservado para <%= user.user.name %> 
-              <%= link_to home_view_path(id: user.id), {data: {toggle: 'modal', target: '#viewModal'}, remote: :true, class: 'btn btn-primary btn-sm'}  do %>
+              <%= link_to home_view_path(id: user.id), {data: {toggle: 'modal', target: '#viewModal'}, remote: :true, method: :patch, class: 'btn btn-primary btn-sm'}  do %>
                 <i class="fa fa-eye"></i>
               <% end %>
               <% if user.user == current_user%>
@@ -49,7 +49,7 @@
               <% end %>
               <% end%>
             <% else%>
-              <%= link_to home_link_path(date_to: @dates[1], hour_to: hour), remote: :true ,data: {toggle: 'modal', target: '#cadModal'}, class: 'btn btn-success' do %>
+              <%= link_to home_link_path(date_to: @dates[1], hour_to: hour), remote: :true, method: :patch ,data: {toggle: 'modal', target: '#cadModal'}, class: 'btn btn-success' do %>
                 <i class="fa fa-plus"></i> Disponível
               <% end %>
             <% end %>
@@ -57,7 +57,7 @@
           <td>
             <% unless (user = @reservations.find_by(day: @dates[2], hour: hour)).nil? %>
               Reservado para <%= user.user.name %> 
-              <%= link_to home_view_path(id: user.id), {data: {toggle: 'modal', target: '#viewModal'}, remote: :true, class: 'btn btn-primary btn-sm'}  do %>
+              <%= link_to home_view_path(id: user.id), {data: {toggle: 'modal', target: '#viewModal'}, remote: :true, method: :patch, class: 'btn btn-primary btn-sm'}  do %>
                 <i class="fa fa-eye"></i>
               <% end %>
               <% if user.user == current_user%>
@@ -66,7 +66,7 @@
               <% end %>
               <% end%>
             <% else%>
-              <%= link_to home_link_path(date_to: @dates[2], hour_to: hour), remote: :true ,data: {toggle: 'modal', target: '#cadModal'}, class: 'btn btn-success' do %>
+              <%= link_to home_link_path(date_to: @dates[2], hour_to: hour), remote: :true, method: :patch ,data: {toggle: 'modal', target: '#cadModal'}, class: 'btn btn-success' do %>
                 <i class="fa fa-plus"></i> Disponível
               <% end %>
             <% end %>
@@ -74,7 +74,7 @@
           <td>
             <% unless (user = @reservations.find_by(day: @dates[3], hour: hour)).nil? %>
               Reservado para <%= user.user.name %> 
-              <%= link_to home_view_path(id: user.id), {data: {toggle: 'modal', target: '#viewModal'}, remote: :true, class: 'btn btn-primary btn-sm'}  do %>
+              <%= link_to home_view_path(id: user.id), {data: {toggle: 'modal', target: '#viewModal'}, remote: :true, method: :patch, class: 'btn btn-primary btn-sm'}  do %>
                 <i class="fa fa-eye"></i>
               <% end %>
               <% if user.user == current_user%>
@@ -83,7 +83,7 @@
               <% end %>
               <% end%>
             <% else%>
-              <%= link_to home_link_path(date_to: @dates[3], hour_to: hour), remote: :true ,data: {toggle: 'modal', target: '#cadModal'}, class: 'btn btn-success' do %>
+              <%= link_to home_link_path(date_to: @dates[3], hour_to: hour), remote: :true, method: :patch ,data: {toggle: 'modal', target: '#cadModal'}, class: 'btn btn-success' do %>
                 <i class="fa fa-plus"></i> Disponível
               <% end %>
             <% end %>
@@ -91,7 +91,7 @@
           <td>
             <% unless (user = @reservations.find_by(day: @dates[4], hour: hour)).nil? %>
               Reservado para <%= user.user.name %> 
-              <%= link_to home_view_path(id: user.id), {data: {toggle: 'modal', target: '#viewModal'}, remote: :true, class: 'btn btn-primary btn-sm'}  do %>
+              <%= link_to home_view_path(id: user.id), {data: {toggle: 'modal', target: '#viewModal'}, remote: :true, method: :patch, class: 'btn btn-primary btn-sm'}  do %>
                 <i class="fa fa-eye"></i>
               <% end %>
               <% if user.user == current_user%>
@@ -100,7 +100,7 @@
               <% end %>
               <% end%>
             <% else%>
-              <%= link_to home_link_path(date_to: @dates[4], hour_to: hour), remote: :true ,data: {toggle: 'modal', target: '#cadModal'}, class: 'btn btn-success' do %>
+              <%= link_to home_link_path(date_to: @dates[4], hour_to: hour), remote: :true, method: :patch ,data: {toggle: 'modal', target: '#cadModal'}, class: 'btn btn-success' do %>
                 <i class="fa fa-plus"></i> Disponível
               <% end %>
             <% end %>
