--- a/app/views/partials/_view.html.erb
+++ b/app/views/partials/_view.html.erb
@@ -5,7 +5,7 @@
 <p>Descrição: <%= @res.description %>
 <p>Reservado feita em: <%= @res.created_at %></p>
 <% if @res.user == current_user && !@res.day.to_date.past? %>  
-  <%= link_to home_edit_path(id: @res.id), {data: {toggle: 'modal', target: '#cadModal'}, remote: :true, class: 'btn btn-warning btn-sm'}  do %>
+  <%= link_to home_edit_path(id: @res.id), {data: {toggle: 'modal', target: '#cadModal'}, remote: :true, method: :patch, class: 'btn btn-warning btn-sm'}  do %>
     <i class="fa fa-pencil"></i> Editar
   <% end %>
 <% end %>
