--- a/app/views/home/system.js.erb
+++ b/app/views/home/system.js.erb
@@ -1,2 +1,2 @@
-
-$('#calendar').html("<%= j render partial: 'partials/table', controller: :home_controller, action: :system, :locals => { :new_day => " + val + "}  %>");
+$('#cadModal').modal('hide')
+$('#calendar').html("<%= j render partial: 'partials/table', controller: :home_controller, action: :system %>");
