--- a/app/views/partials/_edit.html.erb
+++ b/app/views/partials/_edit.html.erb
@@ -10,12 +10,12 @@
   <br>
   <div class="form-group">
     <%= label_tag 'Duração do Uso' %>
-    <%= number_field_tag :duration, '', min: 1, max: @max, class: 'form-control', id: 'duration', value: @duration %>
+    <%= number_field_tag :duration, '', min: 1, max: @max, class: 'form-control', id: 'duration', value: @duration, required: :true %>
   </div>
   <br>
   <div class="form-group">
     <%= label_tag 'Descrição' %>
-    <%= text_field_tag :description, '', class: 'form-control', id: 'description', value: @description %>
+    <%= text_field_tag :description, '', class: 'form-control', id: 'description', value: @description, required: :true %>
   </div>
   <%= hidden_field_tag :user_id, current_user.id %>
   <%= submit_tag 'Salvar', class: 'btn btn-success'%>
