Good Messages with Notify.js

--- a/app/views/home/system.html.erb
+++ b/app/views/home/system.html.erb
@@ -66,3 +66,9 @@
     </div>
   </div>
 </div>
+
+<script>
+  $(document).ready(function(){
+    $("#calendar").html("<%= j render partial: 'partials/table' %>")
+  })
+</script>
