--- a/app/views/home/system.js.erb
+++ b/app/views/home/system.js.erb
@@ -1,4 +1,18 @@
 $('#cadModal').modal('hide'); 
+"<% begin %>"
+"<% if msg == 'reserva_success' %>"
+    $.notify("Reserva criada com sucesso", "success");
+"<% elsif msg == 'reserva_error' %>"
+    $.notify("Erro ao criar reserva", "error");
+"<% elsif msg == 'destroy_success' %>"
+    $.notify("Reserva cancelada com sucesso", "success");
+"<% elsif msg == 'destroy_error' %>"
+    $.notify("Erro ao cancelar reserva", "error");
+"<% end %>"
+"<% rescue %>"
+
+"<% end %>"
+
 var dateBase = $('input[type=hidden]').val();
 $('#calendar').html("<%= j render partial: 'partials/table' %>");
 /*$.get('/home/system', { new_day: dateBase}, 
