--- a/app/views/partials/_view.html.erb
+++ b/app/views/partials/_view.html.erb
@@ -1,8 +1,9 @@
 <p>Dia: <%= @res.day %></p>
 <p>Hora: <%= @res.hour %></p>
 <p>Reservado por: <%= @res.user.name %></p>
+<p>Duração de: <%= @res.show_duration %></p>
 <p>Descrição: <%= @res.description %>
-<p>Reservado feita em: <%= @res.created_at %></p>
+<p>Reserva feita em: <%= @res.created_at %></p>
 <% if @res.user == current_user && !@res.day.to_date.past? %>  
   <%= link_to home_edit_path(id: @res.id), {data: {toggle: 'modal', target: '#cadModal'}, remote: :true, method: :patch, class: 'btn btn-warning btn-sm'}  do %>
     <i class="fa fa-pencil"></i> Editar
