--- a/app/views/partials/_form.html.erb
+++ b/app/views/partials/_form.html.erb
@@ -8,6 +8,10 @@
     <%= text_field_tag :hour, '', readonly: :true, class: 'form-control', id: 'hour', value: @hour %>
   </div>
   <div class="form-group">
+    <%= label_tag 'Duração' %>
+    <%= select_tag :duration, options_for_select([['Uma hora', 1], ['Duas horas', 2]]), class: 'form-control' %>
+  </div>
+  <div class="form-group">
     <%= label_tag 'Descrição' %>
     <%= text_field_tag :description, '', class: 'form-control', id: 'description', required: :true %>
   </div>
