--- a/app/views/partials/_calculate.html.erb
+++ b/app/views/partials/_calculate.html.erb
@@ -12,9 +12,9 @@
         <% end %>
       <% end %>
     <% else %>
-      <%= link_to '', class: 'btn btn-warning btn-sm', remote: :true  do %>
+      <div class="btn btn-warning btn-sm">
         <i class="fa fa-arrow-up"></i>
-      <% end %>
+      </div>
     <% end %>
     <% nothing = false%>
   <% end %>
