--- a/app/views/home/system.js.erb
+++ b/app/views/home/system.js.erb
@@ -1,24 +1,22 @@
 
 //alert("Chegamos até aqui")
-$.ajax({
+/*$.ajax({
   type: 'GET',
   url: "<%= home_system_path %>",
 }).done(function() {
   
-  $('#cadModal').modal('hide'); 
-    var dateBase = $('input[type=hidden]').val();
-
-    "<% begin %>"
-    "<% if msg == 'reserva_success' %>"
-        $.notify("Reserva criada com sucesso", "success");
-    "<% elsif msg == 'reserva_error' %>"
-        $.notify("Erro ao criar reserva", "error");
-    "<% elsif msg == 'destroy_success' %>"
-        $.notify("Reserva cancelada com sucesso", "success");
-    "<% elsif msg == 'destroy_error' %>"
-        $.notify("Erro ao cancelar reserva", "error");
-    "<% end %>"
-    "<% rescue; end %>"
-    
-});
+});*/
+$('#cadModal').modal('hide'); 
 $('#calendar').html("<%= j render partial: 'partials/table' %>");
+    //var dateBase = $('input[type=hidden]').val();
+"<% begin %>"
+"<% if msg == 'reserva_success' %>"
+    $.notify("Reserva criada com sucesso", "success");
+"<% elsif msg == 'reserva_error' %>"
+    $.notify("Erro ao criar reserva", "error");
+"<% elsif msg == 'destroy_success' %>"
+    $.notify("Reserva cancelada com sucesso", "success");
+"<% elsif msg == 'destroy_error' %>"
+    $.notify("Erro ao cancelar reserva", "error");
+"<% end %>"
+"<% rescue; end %>"
