Set the right time zone, Fix test for destroy, keep working to let it dynamic

--- a/app/views/home/system.js.erb
+++ b/app/views/home/system.js.erb
@@ -18,5 +18,9 @@ $('#calendar').html("<%= j render partial: 'partials/table' %>");
     $.notify("Reserva cancelada com sucesso", "success");
 "<% elsif msg == 'destroy_error' %>"
     $.notify("Erro ao cancelar reserva", "error");
+"<% elsif msg == 'edit_success' %>"
+    $.notify("Edição concluida com sucesso", "success");
+"<% elsif msg == 'edit_error' %>"
+    $.notify("Erro ao editar reserva", "error");
 "<% end %>"
 "<% rescue; end %>"
