--- a/app/views/settings/index.html.erb
+++ b/app/views/settings/index.html.erb
@@ -1,14 +1,14 @@
+<%= render partial: 'partials/navbar_admin' %>
 <p id="notice"><%= notice %></p>
 
-<h1>Settings</h1>
+<h1>Configurações  <span style="color: gray;"># Ainda não funcionando</span></h1>
 
-<table>
+<table class="table table-primary">
   <thead>
     <tr>
-      <th>Interval</th>
-      <th>Max usage</th>
-      <th>Initial period</th>
-      <th>Last period</th>
+      <th>Intervalo para Reservas</th>
+      <th>Tempo máximo para reserva</th>
+      <th>Reservas permitidas entre </th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -16,18 +16,32 @@
   <tbody>
     <% @settings.each do |setting| %>
       <tr>
-        <td><%= setting.interval %></td>
-        <td><%= setting.max_usage %></td>
-        <td><%= setting.initial_period %></td>
-        <td><%= setting.last_period %></td>
-        <td><%= link_to 'Show', setting %></td>
-        <td><%= link_to 'Edit', edit_setting_path(setting) %></td>
-        <td><%= link_to 'Destroy', setting, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= setting.interval_s %></td>
+        <td><%= setting.max_usage_s %></td>
+        <td><%= setting.period %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
-
 <br>
-
-<%= link_to 'New Setting', new_setting_path %>
+<%= link_to 'Alterar', settings_alteration_path, remote: :true, method: :patch, class: 'btn btn-warning' %>
+<br><br>
+<!-- Modal Cadastro e Edição-->
+<div class="modal fade" id="cadModal" tabindex="-1" role="dialog" aria-labelledby="cadModalTitle" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="cadModalTitle">Reserva de Sala</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body" id="s-form">
+        
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+      </div>
+    </div>
+  </div>
+</div>
