Working on settings

--- a/app/views/settings/index.html.erb
+++ b/app/views/settings/index.html.erb
@@ -24,7 +24,7 @@
   </tbody>
 </table>
 <br>
-<%= link_to 'Alterar', settings_alteration_path, remote: :true, method: :patch, class: 'btn btn-warning' %>
+<%= link_to 'Alterar', setting_alteration_path, remote: :true, method: :patch, class: 'btn btn-warning' %>
 <br><br>
 <!-- Modal Cadastro e Edição-->
 <div class="modal fade" id="cadModal" tabindex="-1" role="dialog" aria-labelledby="cadModalTitle" aria-hidden="true">
