--- a/app/views/partials/_setting.html.erb
+++ b/app/views/partials/_setting.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag setting_path(Setting.first), method: :patch, remote: :true do %>
+<%= form_tag setting_path(@setting), method: :patch do %>
   <div class="form-group">
     <%= label_tag 'Intervalo' %>
     <%= select_tag :duration, options_for_select([['Hora fechada', 1.0], ['Hora quebrada', 0.5]], @setting.interval),  class: 'form-control' %>
@@ -7,14 +7,13 @@
     <%= label_tag 'Uso máximo' %>
     <%= select_tag :max_usage, options_for_select([['Uma hora', 1.0], ['Duas Horas', 2.0], ['Três horas', 3.0]], @setting.max_usage),  class: 'form-control' %>
   </div>
-  <br>
-    <div class="form-group">
+  <div class="form-group">
     <%= label_tag 'Inicio das reservas' %>
     <%= select_tag :initial_period, options_for_select([['00:00', 0.0], ['01:00', 1.0], ['02:00', 2.0], ['03:00', 3.0], ['04:00', 4.0], ['05:00', 5.0], ['06:00', 6.0], ['07:00', 7.0]], @setting.initial_period),  class: 'form-control' %>
   </div>
   <div class="form-group">
     <%= label_tag 'Fim das Reservas (Note que o fim não reflete até quando uma reserva pode se estender com sua duração)' %>
-    <%= select_tag :last_period, options_for_select([['18:00', 0.0], ['19:00', 1.0], ['20:00', 2.0], ['21:00', 3.0], ['22:00', 4.0], ['23:00', 5.0]], @setting.last_period),  class: 'form-control' %>
+    <%= select_tag :last_period, options_for_select([['18:00', 18.0], ['19:00', 19.0], ['20:00', 20.0], ['21:00', 21.0], ['22:00', 22.0], ['23:00', 23.0]], @setting.last_period),  class: 'form-control' %>
   </div>
   <%= submit_tag 'Salvar', class: 'btn btn-success'%>
 <% end %>
