--- a/app/views/partials/_setting.html.erb
+++ b/app/views/partials/_setting.html.erb
@@ -5,7 +5,7 @@
   </div>
   <div class="form-group">
     <%= label_tag 'Uso máximo' %>
-    <%= select_tag :max_usage, options_for_select([['Uma hora', 1.0], ['Duas Horas', 2.0], ['Três horas', 3.0]], @setting.max_usage),  class: 'form-control' %>
+    <%= select_tag :max_usage, options_for_select([['Uma hora', 1.0], ['Duas Horas', 2.0], ['Três Horas', 3.0]], @setting.max_usage),  class: 'form-control' %>
   </div>
   <div class="form-group">
     <%= label_tag 'Inicio das reservas' %>
