--- a/app/views/partials/_edit.html.erb
+++ b/app/views/partials/_edit.html.erb
@@ -10,7 +10,7 @@
   <br>
     <div class="form-group">
     <%= label_tag 'Duração' %>
-    <%= select_tag :duration, options_for_select([['Uma hora', 1.0], ['Duas horas', 2.0]], @res.duration),  class: 'form-control' %>
+    <%= select_tag :duration, options_for_select(@durations, @res.duration),  class: 'form-control' %>
   </div>
   <div class="form-group">
     <%= label_tag 'Descrição' %>
