--- a/app/views/partials/_form.html.erb
+++ b/app/views/partials/_form.html.erb
@@ -9,7 +9,7 @@
   </div>
   <div class="form-group">
     <%= label_tag 'Duração' %>
-    <%= select_tag :duration, options_for_select([['Uma hora', 1.0], ['Duas horas', 2.0]]), class: 'form-control' %>
+    <%= select_tag :duration, options_for_select(@durations), class: 'form-control' %>
   </div>
   <div class="form-group">
     <%= label_tag 'Descrição' %>
